--- a/analyst/package.json
+++ b/analyst/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "rtsdemo",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/history": "^4.7.7",
+    "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "antd": "^4.7.3",
-    "axios": "^0.21.0",
-    "babel-plugin-import": "^1.13.1",
-    "element-react": "^1.4.34",
-    "react": "^17.0.1",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-thunk": "^2.1.0",
+    "antd": "^4.5.4",
+    "antd-mobile": "^2.3.3",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "concurrently": "^5.3.0",
+    "history": "^5.0.0",
+    "less": "^3.12.2",
+    "mongoose": "^5.9.28",
+    "react": "^16.13.1",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.6",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "react-start": "react-app-rewired start",
+    "react-build": "react-app-rewired build",
+    "start": "concurrently \"react-app-rewired start\" \"cd server && yarn start\"",
+    "build": "concurrently \"react-app-rewired build\" \"cd server && yarn build\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -45,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "customize-cra": "^1.0.0",
+    "less-loader": "^7.0.2"
+  },
+  "proxy": "http://127.0.0.1:3003"
 }
