--- a/analyst/tsconfig.json
+++ b/analyst/tsconfig.json
@@ -12,7 +12,6 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -21,6 +20,6 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src", "redux"
   ]
 }
