--- a/analyst/package.json
+++ b/analyst/package.json
@@ -55,8 +55,9 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "customize-cra": "^1.0.0",
-    "less-loader": "^7.0.2"
+    "less-loader": "^7.1.0"
   },
   "proxy": "http://127.0.0.1:3003"
 }
