--- a/analyst/tsconfig.json
+++ b/analyst/tsconfig.json
@@ -15,11 +15,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "isolatedModules": true,
+    "experimentalDecorators": true,
+    "baseUrl": "src"
   },
   "include": [
-    "src", "redux"
+    "src",
+    "redux"
   ]
 }
