--- a/analyst/package.json
+++ b/analyst/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.11",
     "@types/history": "^4.7.7",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -19,9 +20,8 @@
     "antd-mobile": "^2.3.3",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
-    "history": "^5.0.0",
-    "less": "^3.12.2",
     "mongoose": "^5.9.28",
     "react": "^16.13.1",
     "react-app-rewire-less": "^2.1.3",
@@ -56,7 +56,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.165",
+    "@types/classnames": "^2.2.10",
     "customize-cra": "^1.0.0",
+    "less": "^3.11.1",
     "less-loader": "^7.1.0"
   },
   "proxy": "http://127.0.0.1:3003"
