--- a/analyst/package.json
+++ b/analyst/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.11",
+    "@types/echarts": "^4.4.6",
     "@types/history": "^4.7.7",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -22,8 +23,11 @@
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
+    "echarts": "^4.7.0",
+    "echarts-for-react": "^2.0.16",
     "mongoose": "^5.9.28",
     "react": "^16.13.1",
+    "react-amap": "^1.2.8",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
