--- a/analyst/server/package.json
+++ b/analyst/server/package.json
@@ -6,11 +6,13 @@
   "author": "luffy",
   "license": "MIT",
   "dependencies": {
+    "@nestjs/common": "^7.6.4",
+    "@nestjs/mongoose": "^7.2.0",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "mongoose": "^5.9.29",
+    "mongoose": "^5.11.8",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2"
   },
