--- a/analyst/package.json
+++ b/analyst/package.json
@@ -25,6 +25,9 @@
     "concurrently": "^5.3.0",
     "echarts": "^4.7.0",
     "echarts-for-react": "^2.0.16",
+    "mobx": "^6.0.4",
+    "mobx-persist": "^0.4.1",
+    "mobx-react": "^7.0.5",
     "mongoose": "^5.9.28",
     "react": "^16.13.1",
     "react-amap": "^1.2.8",
