--- a/analyst/server/package.json
+++ b/analyst/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "server config",
-  "main": "server.js",
+  "main": "app.ts",
   "author": "luffy",
   "license": "MIT",
   "dependencies": {
@@ -17,8 +17,8 @@
     "ts-node": "^8.10.2"
   },
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "build": "babel ./server.js --out-file server-compiled.js",
+    "start": "ts-node src/app.ts",
+    "build": "babel ./app.ts --out-file server-compiled.js",
     "serve": "node server-compiled.js"
   },
   "devDependencies": {
