--- a/analyst/package.json
+++ b/analyst/package.json
@@ -68,5 +68,5 @@
     "less": "^3.11.1",
     "less-loader": "^7.1.0"
   },
-  "proxy": "http://127.0.0.1:3003"
+  "proxy": "http://localhost:3003"
 }
