--- a/analyst/server/package.json
+++ b/analyst/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "server config",
-  "main": "app.ts",
+  "main": "demo.ts",
   "author": "luffy",
   "license": "MIT",
   "dependencies": {
@@ -12,13 +12,18 @@
     "@types/node": "^14.0.27",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "cheerio": "^1.0.0-rc.5",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.4",
+    "superagent": "^6.1.0",
+    "superagent-charset": "^1.2.0",
     "ts-node": "^8.10.2"
   },
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "build": "babel ./app.ts --out-file server-compiled.js",
+    "start": "ts-node src/demo.ts",
+    "build": "babel ./demo.ts --out-file server-compiled.js",
     "serve": "node server-compiled.js"
   },
   "devDependencies": {
